[gd_scene load_steps=3 format=2]

[ext_resource path="res://demo_no_arch/event_popup.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/PlaceholderUi.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="EventPopup" parent="." instance=ExtResource( 1 )]

[node name="HSplitContainer" type="VSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
split_offset = 200

[node name="VBoxContainer" type="VBoxContainer" parent="HSplitContainer"]
margin_right = 1024.0
margin_bottom = 494.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PanelContainer" type="PanelContainer" parent="HSplitContainer/VBoxContainer"]
margin_right = 1024.0
margin_bottom = 28.0

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/VBoxContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 21.0

[node name="HullLabel" type="Label" parent="HSplitContainer/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 334.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "HULL: "
align = 1

[node name="EnergyLabel" type="Label" parent="HSplitContainer/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 338.0
margin_right = 672.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "ENERGY: "
align = 1

[node name="CreditsLabel" type="Label" parent="HSplitContainer/VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 676.0
margin_right = 1010.0
margin_bottom = 14.0
size_flags_horizontal = 3
text = "CREDITS: "
align = 1

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 1024.0
margin_bottom = 52.0

[node name="HBoxContainer" type="HBoxContainer" parent="HSplitContainer/VBoxContainer/MarginContainer"]
margin_right = 1024.0
margin_bottom = 20.0
alignment = 1

[node name="System1" type="Button" parent="HSplitContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
margin_right = 338.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "System 1"

[node name="System2" type="Button" parent="HSplitContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 342.0
margin_right = 681.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "System 2"

[node name="System3" type="Button" parent="HSplitContainer/VBoxContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 685.0
margin_right = 1024.0
margin_bottom = 20.0
size_flags_horizontal = 3
text = "System 3"

[node name="SystemDetails" type="Panel" parent="HSplitContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 1024.0
margin_bottom = 446.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="HSplitContainer/VBoxContainer/SystemDetails"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="SystemDisplay" type="VBoxContainer" parent="HSplitContainer/VBoxContainer/SystemDetails/MarginContainer"]
margin_right = 1004.0
margin_bottom = 370.0

[node name="SystemNameV" type="Label" parent="HSplitContainer/VBoxContainer/SystemDetails/MarginContainer/SystemDisplay"]
unique_name_in_owner = true
margin_right = 1004.0
margin_bottom = 14.0
align = 1

[node name="Label" type="Label" parent="HSplitContainer/VBoxContainer/SystemDetails/MarginContainer/SystemDisplay"]
margin_top = 18.0
margin_right = 1004.0
margin_bottom = 32.0
text = "Celestial Bodies In System:"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer/VBoxContainer/SystemDetails/MarginContainer/SystemDisplay"]
margin_top = 36.0
margin_right = 1004.0
margin_bottom = 370.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="SystemBodies" type="VBoxContainer" parent="HSplitContainer/VBoxContainer/SystemDetails/MarginContainer/SystemDisplay/ScrollContainer"]
unique_name_in_owner = true
margin_right = 1004.0
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="PerformActivity" type="Button" parent="HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 450.0
margin_right = 1024.0
margin_bottom = 470.0
text = "Perform Activity \"None\""

[node name="SaveButton" type="Button" parent="HSplitContainer/VBoxContainer"]
margin_top = 474.0
margin_right = 1024.0
margin_bottom = 494.0
text = "Save To File"

[node name="ScrollContainer" type="ScrollContainer" parent="HSplitContainer"]
margin_top = 506.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LogsContainer" type="VBoxContainer" parent="HSplitContainer/ScrollContainer"]
unique_name_in_owner = true
margin_right = 1024.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="option_selected" from="EventPopup" to="." method="_on_EventPopup_option_selected"]
[connection signal="button_up" from="HSplitContainer/VBoxContainer/MarginContainer/HBoxContainer/System1" to="." method="_on_System1_button_up"]
[connection signal="button_up" from="HSplitContainer/VBoxContainer/MarginContainer/HBoxContainer/System2" to="." method="_on_System2_button_up"]
[connection signal="button_up" from="HSplitContainer/VBoxContainer/MarginContainer/HBoxContainer/System3" to="." method="_on_System3_button_up"]
[connection signal="button_up" from="HSplitContainer/VBoxContainer/PerformActivity" to="." method="_on_PerformActivity_button_up"]
[connection signal="button_up" from="HSplitContainer/VBoxContainer/SaveButton" to="." method="_on_SaveButton_button_up"]
